fixtures/src/invalid/zip-entry-not-in-manifest/OEBPS/extra.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Extra</title></head>
<body>
  <h1>Extra</h1>
  <p>This file is not listed in the manifest.</p>
</body>
</html>
